syntax = "proto3";

package message;
option go_package = "github.com/tuarrep/sounddrop/message";

message DeviceStatus {
    string id = 1;
    bool allowed = 2;
}